--- a/H1EmuLauncher/Windows/AddServer.xaml
+++ b/H1EmuLauncher/Windows/AddServer.xaml
@@ -93,31 +93,32 @@
                 </DockPanel>
             </Grid>
 
-            <!-- Grid for main content inside of darkened area -->
-            <Grid
-                Grid.Row="1"
-                Background="#1C1B22"
-                Margin="15,5,15,15"
-                UseLayoutRounding="True">
-                
+            <!-- Main content in darkened area -->
+            <Border Grid.Row="1"
+                    Background="#1C1B22"
+                    Margin="15,5,15,15"
+                    UseLayoutRounding="True"
+                    CornerRadius="5">
+
                 <!-- Drop shadow effect -->
-                <Grid.Effect>
+                <Border.Effect>
                     <DropShadowEffect
                         BlurRadius="8"
                         Direction="-90"
                         RenderingBias="Quality"
                         ShadowDepth="1"/>
                     
-                </Grid.Effect>
+                </Border.Effect>
 
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
 
-                <!-- Server name text box -->
-                <TextBox x:Name="serverNameBox"
+                    <!-- Server name text box -->
+                    <TextBox x:Name="serverNameBox"
                     Width="300"
                     Height="35"
                     Margin="0,12,0,0"
@@ -130,8 +131,8 @@
                     LostFocus="ServerNameLostFocus"
                     Style="{DynamicResource TextBoxPrimaryStyle}"/>
 
-                <!-- Hint for server name textbox -->
-                <TextBlock x:Name="serverNameHint"
+                    <!-- Hint for server name textbox -->
+                    <TextBlock x:Name="serverNameHint"
                     Width="300"
                     Height="27"
                     Margin="0,12,0,0"
@@ -143,8 +144,8 @@
                     FontSize="16"
                     Text="{DynamicResource item144}"/>
 
-                <!-- Server IP textbox -->
-                <TextBox x:Name="serverIpBox"
+                    <!-- Server IP textbox -->
+                    <TextBox x:Name="serverIpBox"
                     Grid.Row="1"
                     Width="300"
                     Height="35"
@@ -157,8 +158,8 @@
                     KeyDown="ServerIpBoxKeyDown"
                     Style="{DynamicResource TextBoxPrimaryStyle}"/>
 
-                <!-- Hint for server IP textbox -->
-                <TextBlock x:Name="serverIpHint"
+                    <!-- Hint for server IP textbox -->
+                    <TextBlock x:Name="serverIpHint"
                     Grid.Row="1"
                     Width="300"
                     Height="24"
@@ -169,8 +170,8 @@
                     FontSize="16"
                     Text="{DynamicResource item145}"/>
 
-                <!-- Add server button -->
-                <Button
+                    <!-- Add server button -->
+                    <Button
                     Grid.Row="2"
                     Grid.Column="1"
                     Click="AddButton"
@@ -186,14 +187,14 @@
                     BorderThickness="0"
                     Content="{DynamicResource item18}"
                     Style="{DynamicResource StandardButton}">
-                    
-                    <Button.Background>
-                        <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-                    </Button.Background>
-                </Button>
 
-                <!-- Cancel button -->
-                <Button
+                        <Button.Background>
+                            <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
+                        </Button.Background>
+                    </Button>
+
+                    <!-- Cancel button -->
+                    <Button
                     Grid.Row="2"
                     Grid.Column="1"
                     Click="CancelButton"
@@ -209,12 +210,13 @@
                     BorderThickness="0"
                     Content="{DynamicResource item28}"
                     Style="{DynamicResource StandardButton}">
-                    
-                    <Button.Background>
-                        <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-                    </Button.Background>
-                </Button>
-            </Grid>
+
+                        <Button.Background>
+                            <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
+                        </Button.Background>
+                    </Button>
+                </Grid>
+            </Border>
         </Grid>
 
         <!-- Background fade on unfocus -->
